fix: fix spacing on learn section

--- a/src/scss/components/learn.scss
+++ b/src/scss/components/learn.scss
@@ -1,5 +1,5 @@
 .learn {
-    height: 50vh;
+    margin: $spacer * 5 auto;
     h3 {
         color: $vivid-pink;
     }
